gobmkida/g3/find_eye_dragons
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/find_eye_dragons/src/engine/optics.c:1130:8: error: use of undeclared identifier 'byte_A2CADF'
if ( ( byte_A2CADF[v9] == 3 || p_origin[171] != origin || *( ( _BYTE *)p_origin + 700)) 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/find_eye_dragons/src/obj/1/optics.o] Error 1
